# Development-task

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/recruitment/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_uuid.py  0003_rename_uuid_user_uid.py  0004_alter_user_phone_number.py  0005_user_displayed_picture.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: ReportPage.tsx  UserPage.tsx  table.css
frontend/src/pages/shared/: api.ts  types.ts
